// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom stage shell view Setup shell view tests: Overview Tab 1`] = `
<div>
  <section
    class="approvalStageSetupShellWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_approvalStageSetupShell_overview"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="overview"
          data-testid="overview"
          id="bp3-tab-title_approvalStageSetupShell_overview"
          role="tab"
          tabindex="0"
        >
          <span
            class="tab"
          >
            <span
              class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-green800"
              icon="tick"
              style="height: 20px;"
            >
              <svg
                data-icon="tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  tick
                </desc>
                <path
                  d="M17 4c-.28 0-.53.11-.71.29L7 13.59 3.71 10.3A.965.965 0 003 10a1.003 1.003 0 00-.71 1.71l4 4c.18.18.43.29.71.29s.53-.11.71-.29l10-10A1.003 1.003 0 0017 4z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            overview
          </span>
        </div>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
          icon="chevron-right"
          style="align-self: center; height: 20px;"
        >
          <svg
            data-icon="chevron-right"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          aria-controls="bp3-tab-panel_approvalStageSetupShell_executionText"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab fullHeight stepGroup"
          data-tab-id="executionText"
          data-testid="executionText"
          id="bp3-tab-title_approvalStageSetupShell_executionText"
          role="tab"
          tabindex="0"
        >
          <span
            class="tab"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="deployment-success-legacy"
              style="height: 20px;"
            >
              <svg
                height="20"
                viewBox="0 0 14 14"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="7"
                  cy="7"
                  fill="#38d168"
                  r="7"
                />
                <circle
                  cx="7"
                  cy="7"
                  fill="#fff"
                  r="5.2"
                />
                <path
                  d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                  fill="#38d168"
                />
              </svg>
            </span>
            executionText
          </span>
        </div>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
          icon="chevron-right"
          style="align-self: center; height: 20px;"
        >
          <svg
            data-icon="chevron-right"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          aria-controls="bp3-tab-panel_approvalStageSetupShell_advancedTitle"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="advancedTitle"
          data-testid="advancedTitle"
          id="bp3-tab-title_approvalStageSetupShell_advancedTitle"
          role="tab"
          tabindex="0"
        >
          <span
            class="tab"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="advanced"
              style="height: 20px;"
            >
              <svg
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.557 4.017a.5.5 0 00-.5.492v7.005a.5.5 0 00.5.507h8.98a.5.5 0 00.5-.5l.001-2.554a.5.5 0 111 0v2.554a1.5 1.5 0 01-1.5 1.5h-8.98a1.5 1.5 0 01-1.5-1.522V4.495a1.5 1.5 0 011.5-1.478h2.951a.5.5 0 010 1H3.557z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.002 3.694a1.3 1.3 0 100 2.6 1.3 1.3 0 000-2.6zm-2.3 1.3a2.3 2.3 0 114.6 0 2.3 2.3 0 01-4.6 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10.502 2.949v-.953h1v.953h-1zm0 5.051V6.98h1V8h-1zm2.549-3.502h.953v1h-.953v-1zM8 4.498h1.02v1H8v-1zm4.805 1.596l.674.674-.708.707-.673-.674.707-.707zM9.233 2.522l.722.722-.708.707-.721-.722.707-.707zm2.865.674l.673-.674.708.708-.674.673-.707-.707zM8.526 6.768l.722-.722.707.708-.722.721-.707-.707z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            advancedTitle
          </span>
        </div>
        <div
          class="bp3-flex-expander"
        />
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-secondary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
            data-icon="upload-box"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.333 8.334l2.668-2.667L8 13.334V5.667l2.67 2.667"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M3.333 6V3.333h9.334V6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            common.saveAsTemplate
          </span>
        </button>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_approvalStageSetupShell_overview"
        class="bp3-tab-panel"
        id="bp3-tab-panel_approvalStageSetupShell_overview"
        role="tabpanel"
      >
        <div
          class="approvalStageOverviewWrapper stageSection"
        >
          <div
            class="content"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--margin-bottom-small"
              id="stageOverview"
            >
              stageOverview
            </p>
            <div
              class="StyledProps--font StyledProps--main basicOverviewDetails"
              id="stageOverview"
            >
              <form
                action="#"
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="universalInputNameWithId"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              Id
                            </p>
                          </div>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                >
                                  CustomStep
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            name
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="name"
                                type="text"
                                value="changedstagename"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="Accordion--accordion"
            >
              <div
                class="Accordion--panel"
                data-open="false"
                data-testid="variables-panel"
                id="variables-panel"
              >
                <div
                  class="Accordion--summary"
                  data-testid="variables-summary"
                >
                  <div
                    class=""
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--font-variation-h5"
                    >
                      advancedTitle
                    </p>
                  </div>
                  <div
                    class="Accordion--chevron"
                  />
                </div>
                <div
                  class="bp3-collapse Accordion--collapse"
                >
                  <div
                    aria-hidden="false"
                    class="bp3-collapse-body"
                    style="transform: translateY(-undefinedpx);"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer StyledProps--padding-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  next
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Custom stage shell view readonly view should work: readonly view custom step overview 1`] = `
<div>
  <section
    class="approvalStageSetupShellWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_approvalStageSetupShell_overview"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="overview"
          data-testid="overview"
          id="bp3-tab-title_approvalStageSetupShell_overview"
          role="tab"
          tabindex="0"
        >
          <span
            class="tab"
          >
            <span
              class="bp3-icon bp3-icon-tick StyledProps--main StyledProps--color StyledProps--color-green800"
              icon="tick"
              style="height: 20px;"
            >
              <svg
                data-icon="tick"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <desc>
                  tick
                </desc>
                <path
                  d="M17 4c-.28 0-.53.11-.71.29L7 13.59 3.71 10.3A.965.965 0 003 10a1.003 1.003 0 00-.71 1.71l4 4c.18.18.43.29.71.29s.53-.11.71-.29l10-10A1.003 1.003 0 0017 4z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            overview
          </span>
        </div>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
          icon="chevron-right"
          style="align-self: center; height: 20px;"
        >
          <svg
            data-icon="chevron-right"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          aria-controls="bp3-tab-panel_approvalStageSetupShell_executionText"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab fullHeight stepGroup"
          data-tab-id="executionText"
          data-testid="executionText"
          id="bp3-tab-title_approvalStageSetupShell_executionText"
          role="tab"
          tabindex="0"
        >
          <span
            class="tab"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="deployment-success-legacy"
              style="height: 20px;"
            >
              <svg
                height="20"
                viewBox="0 0 14 14"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="7"
                  cy="7"
                  fill="#38d168"
                  r="7"
                />
                <circle
                  cx="7"
                  cy="7"
                  fill="#fff"
                  r="5.2"
                />
                <path
                  d="M5.8 9.5l4.4-4.1-.9-1-3.6 3.2-1.2-1.2-1.1 1.1 2.1 2.1.1.1z"
                  fill="#38d168"
                />
              </svg>
            </span>
            executionText
          </span>
        </div>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small StyledProps--color StyledProps--color-grey400"
          icon="chevron-right"
          style="align-self: center; height: 20px;"
        >
          <svg
            data-icon="chevron-right"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M13.71 9.29l-6-6a1.003 1.003 0 00-1.42 1.42l5.3 5.29-5.29 5.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l6-6c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          aria-controls="bp3-tab-panel_approvalStageSetupShell_advancedTitle"
          aria-disabled="false"
          aria-expanded="false"
          aria-selected="false"
          class="bp3-tab"
          data-tab-id="advancedTitle"
          data-testid="advancedTitle"
          id="bp3-tab-title_approvalStageSetupShell_advancedTitle"
          role="tab"
          tabindex="0"
        >
          <span
            class="tab"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="advanced"
              style="height: 20px;"
            >
              <svg
                height="20"
                viewBox="0 0 16 16"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.557 4.017a.5.5 0 00-.5.492v7.005a.5.5 0 00.5.507h8.98a.5.5 0 00.5-.5l.001-2.554a.5.5 0 111 0v2.554a1.5 1.5 0 01-1.5 1.5h-8.98a1.5 1.5 0 01-1.5-1.522V4.495a1.5 1.5 0 011.5-1.478h2.951a.5.5 0 010 1H3.557z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M11.002 3.694a1.3 1.3 0 100 2.6 1.3 1.3 0 000-2.6zm-2.3 1.3a2.3 2.3 0 114.6 0 2.3 2.3 0 01-4.6 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M10.502 2.949v-.953h1v.953h-1zm0 5.051V6.98h1V8h-1zm2.549-3.502h.953v1h-.953v-1zM8 4.498h1.02v1H8v-1zm4.805 1.596l.674.674-.708.707-.673-.674.707-.707zM9.233 2.522l.722.722-.708.707-.721-.722.707-.707zm2.865.674l.673-.674.708.708-.674.673-.707-.707zM8.526 6.768l.722-.722.707.708-.722.721-.707-.707z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            advancedTitle
          </span>
        </div>
        <div
          class="bp3-flex-expander"
        />
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--withLeftIcon Button--variation Button--variation-secondary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
            data-icon="upload-box"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.333 8.334l2.668-2.667L8 13.334V5.667l2.67 2.667"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M3.333 6V3.333h9.334V6"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            common.saveAsTemplate
          </span>
        </button>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_approvalStageSetupShell_overview"
        class="bp3-tab-panel"
        id="bp3-tab-panel_approvalStageSetupShell_overview"
        role="tabpanel"
      >
        <div
          class="approvalStageOverviewWrapper stageSection"
        >
          <div
            class="content"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-h5 StyledProps--margin-bottom-small"
              id="stageOverview"
            >
              stageOverview
            </p>
            <div
              class="StyledProps--font StyledProps--main basicOverviewDetails"
              id="stageOverview"
            >
              <form
                action="#"
                class="FormikForm--main"
              >
                <div>
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="universalInputNameWithId"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              Id
                            </p>
                          </div>
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                >
                                  CustomStep
                                </span>
                              </div>
                            </span>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group bp3-disabled"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            name
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group bp3-disabled"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                disabled=""
                                name="name"
                                type="text"
                                value="CustomStep"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="description-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main bp3-label descriptionLabel"
                        >
                          optionalField
                          <span
                            class="bp3-icon StyledProps--main editOpen"
                            data-icon="Edit"
                            data-name="edit"
                            data-testid="tags-edit"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <path
                                clip-rule="evenodd"
                                d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                                opacity="0.3"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="Accordion--accordion"
            >
              <div
                class="Accordion--panel"
                data-open="false"
                data-testid="variables-panel"
                id="variables-panel"
              >
                <div
                  class="Accordion--summary"
                  data-testid="variables-summary"
                >
                  <div
                    class=""
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--font-variation-h5"
                    >
                      advancedTitle
                    </p>
                  </div>
                  <div
                    class="Accordion--chevron"
                  />
                </div>
                <div
                  class="bp3-collapse Accordion--collapse"
                >
                  <div
                    aria-hidden="false"
                    class="bp3-collapse-body"
                    style="transform: translateY(-undefinedpx);"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main footer StyledProps--padding-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  next
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
